bk_ida/gccida/g1/rtl_for_decl_location
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtl_for_decl_location/src/dwarf2out.c:9235:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtl_for_decl_location/src/dwarf2out.c:9236:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtl_for_decl_location/src/dwarf2out.c:9329:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( BYTE5( type->common.type->block.abstract_origin) >> 1) & 0x7F] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtl_for_decl_location/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtl_for_decl_location/src/dwarf2out.c:9355:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8957, "rtl_for_decl_location"); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rtl_for_decl_location/src/obj/dwarf2out.o] Error 1
